add prettier to codebase
